--- a/frontend/chineseapp/package.json
+++ b/frontend/chineseapp/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "js-cookie": "^3.0.1",
     "next": "13.0.0",
+    "pinyin-rest": "^1.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-cookie": "^4.1.1",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.1"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
