--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap-icons": "^1.10.2",
+    "cookie-cutter": "^0.2.0",
     "js-cookie": "^3.0.1",
     "next": "13.0.0",
     "pinyin-rest": "^1.0.2",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-router-dom": "^6.4.3"
   },
